// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PureEducation /> bails out on no data 1`] = `
.c1 {
  font-family: Inconsolata,monospace;
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-weight: 700;
  text-transform: uppercase;
  --tw-text-opacity: 1;
  color: rgba(77,54,140,var(--tw-text-opacity));
}

.c0 {
  padding: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

<div
  data-testid="education"
>
  <div
    class="c0"
    data-testid="sectionContainer"
  >
    <h2
      class="c1"
      data-testid="sectionTitle"
    >
      Education
    </h2>
  </div>
</div>
`;

exports[`<PureEducation /> handles times where you don't have a 'type' (e.g. online courses) 1`] = `
.c5 ul {
  list-style-type: disc;
  list-style-position: inside;
  text-indent: -21px;
  padding-left: 21px;
}

.c3 {
  margin-bottom: 0.25rem;
  font-weight: 700;
  font-size: 1.25rem;
  line-height: 1.25rem;
}

.c2 {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.c2:nth-of-type(1) {
  margin-top: 0.5rem;
}

.c4 {
  font-style: italic;
  margin-bottom: 0.25rem;
}

.c1 {
  font-family: Inconsolata,monospace;
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-weight: 700;
  text-transform: uppercase;
  --tw-text-opacity: 1;
  color: rgba(77,54,140,var(--tw-text-opacity));
}

.c0 {
  padding: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

<div
  data-testid="education"
>
  <div
    class="c0"
    data-testid="sectionContainer"
  >
    <h2
      class="c1"
      data-testid="sectionTitle"
    >
      Education
    </h2>
    <div
      class="c2"
      data-testid="sectionItemContainer"
    >
      <h1
        class="c3"
        data-testid="itemTitle"
      >
        Software Development
      </h1>
      <div
        class="c4"
        data-testid="byline"
      >
        <span
          data-testid="itemSubtitle"
        >
          University
        </span>
         | 
        <span
          data-testid="sectionItemDates"
        >
          2011
           - 
          2013
        </span>
      </div>
      <div
        class="c5"
        data-testid="sectionItemDetails"
      >
        <ul>
          

          <li>
            DB1101 - Basic SQL
          </li>
          

        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PureEducation /> no course details? 1`] = `
.c5 ul {
  list-style-type: disc;
  list-style-position: inside;
  text-indent: -21px;
  padding-left: 21px;
}

.c3 {
  margin-bottom: 0.25rem;
  font-weight: 700;
  font-size: 1.25rem;
  line-height: 1.25rem;
}

.c2 {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.c2:nth-of-type(1) {
  margin-top: 0.5rem;
}

.c4 {
  font-style: italic;
  margin-bottom: 0.25rem;
}

.c1 {
  font-family: Inconsolata,monospace;
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-weight: 700;
  text-transform: uppercase;
  --tw-text-opacity: 1;
  color: rgba(77,54,140,var(--tw-text-opacity));
}

.c0 {
  padding: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

<div
  data-testid="education"
>
  <div
    class="c0"
    data-testid="sectionContainer"
  >
    <h2
      class="c1"
      data-testid="sectionTitle"
    >
      Education
    </h2>
    <div
      class="c2"
      data-testid="sectionItemContainer"
    >
      <h1
        class="c3"
        data-testid="itemTitle"
      >
        Software Development
      </h1>
      <div
        class="c4"
        data-testid="byline"
      >
        <span
          data-testid="itemSubtitle"
        >
          University
        </span>
         | 
        <span
          data-testid="sectionItemDates"
        >
          2011
           - 
          2013
        </span>
      </div>
      <div
        class="c5"
        data-testid="sectionItemDetails"
      >
        <ul>
          

          <li>
            Awesome Class
          </li>
          

          <li>
            Boring Unit
          </li>
          

          <li>
            Interesting Extracurricular
          </li>
          

        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PureEducation /> renders OK 1`] = `
.c5 ul {
  list-style-type: disc;
  list-style-position: inside;
  text-indent: -21px;
  padding-left: 21px;
}

.c3 {
  margin-bottom: 0.25rem;
  font-weight: 700;
  font-size: 1.25rem;
  line-height: 1.25rem;
}

.c2 {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.c2:nth-of-type(1) {
  margin-top: 0.5rem;
}

.c4 {
  font-style: italic;
  margin-bottom: 0.25rem;
}

.c1 {
  font-family: Inconsolata,monospace;
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-weight: 700;
  text-transform: uppercase;
  --tw-text-opacity: 1;
  color: rgba(77,54,140,var(--tw-text-opacity));
}

.c0 {
  padding: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

<div
  data-testid="education"
>
  <div
    class="c0"
    data-testid="sectionContainer"
  >
    <h2
      class="c1"
      data-testid="sectionTitle"
    >
      Education
    </h2>
    <div
      class="c2"
      data-testid="sectionItemContainer"
    >
      <h1
        class="c3"
        data-testid="itemTitle"
      >
        Bachelor of Software Development
      </h1>
      <div
        class="c4"
        data-testid="byline"
      >
        <span
          data-testid="itemSubtitle"
        >
          University
        </span>
         | 
        <span
          data-testid="sectionItemDates"
        >
          2011
           - 
          2013
        </span>
      </div>
      <div
        class="c5"
        data-testid="sectionItemDetails"
      >
        <ul>
          

          <li>
            DB1101 - Basic SQL
          </li>
          

        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PureEducation /> renders array of >=1 PureEducation items 1`] = `
.c5 ul {
  list-style-type: disc;
  list-style-position: inside;
  text-indent: -21px;
  padding-left: 21px;
}

.c3 {
  margin-bottom: 0.25rem;
  font-weight: 700;
  font-size: 1.25rem;
  line-height: 1.25rem;
}

.c2 {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.c2:nth-of-type(1) {
  margin-top: 0.5rem;
}

.c4 {
  font-style: italic;
  margin-bottom: 0.25rem;
}

.c1 {
  font-family: Inconsolata,monospace;
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-weight: 700;
  text-transform: uppercase;
  --tw-text-opacity: 1;
  color: rgba(77,54,140,var(--tw-text-opacity));
}

.c0 {
  padding: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

<div
  data-testid="education"
>
  <div
    class="c0"
    data-testid="sectionContainer"
  >
    <h2
      class="c1"
      data-testid="sectionTitle"
    >
      Education
    </h2>
    <div
      class="c2"
      data-testid="sectionItemContainer"
    >
      <h1
        class="c3"
        data-testid="itemTitle"
      >
        Bachelor of Software Development
      </h1>
      <div
        class="c4"
        data-testid="byline"
      >
        <span
          data-testid="itemSubtitle"
        >
          University
        </span>
         | 
        <span
          data-testid="sectionItemDates"
        >
          2011
           - 
          2013
        </span>
      </div>
      <div
        class="c5"
        data-testid="sectionItemDetails"
      >
        <ul>
          

          <li>
            DB1101 - Basic SQL
          </li>
          

        </ul>
      </div>
    </div>
  </div>
</div>
`;
